Fixed vertical alignment of delete button on timetable details

--- a/src/main/resources/public/style.css
+++ b/src/main/resources/public/style.css
@@ -345,6 +345,13 @@ percent-width-small {
    border: none;
  }
 
+
+.timetable-actions {
+    display: flex;
+    flex-direction: row;
+}
+
+
  .content .delete-form {
       display: inline;
   }
